K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webapp-deploy
  namespace: go-webapp
spec:
  selector:
    matchLabels:
      app: go-webapp
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
      - name: go-webapp
        image: lastpush/go-webapp:latest
        ports:
        - containerPort: 8080
