K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webapp-svc
  namespace: go-webapp
spec:
  selector:
    app: go-webapp
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
