K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-webapp-ing
  namespace: go-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-webapp.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-webapp-svc
            port: 
              number: 80
